force-app/main/default/objects/Token__c/Token__c.object-meta.xml
<CustomObject>
    <label>Token</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>