force-app/main/default/objects/Token__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>NOW() &lt;  Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>