force-app/main/default/objects/Token__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Tokens</relationshipLabel>
    <relationshipName>Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>